# valo-community

./: .dockerignore  .env.example  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  SECURITY.md  THIRD_PARTY_DISCLOSURE.md  UPSTREAM.md  docker-compose.yml  pyproject.toml  requirements.txt  run-valo-community-demo.sh  run-valo-local.bat  start.bat  start.sh  stop-valo-local.bat
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml  release.yml
app/: main.py  schemas.py
app/api/: _rate_limits.py  enforcement.py  policies.py  proxy.py  routes.py
app/core/: config.py  edition.py  exceptions.py  limiter.py  logging.py
app/middleware/: __init__.py  policy_enforcement.py
app/playbooks/: __init__.py  events.py  executor.py  loader.py  (+6 more)
docs/: BLACK_HAT_DEMO.md  COMMUNITY_ARCHITECTURE.md  COMMUNITY_OWASP_ATLAS.md  ENDPOINTS_AND_LOGIC.md  LEARNING_LOOP.md  PLAYBOOKS.md  POLICY_ENGINE.md  RELEASE_v0.1.0-community.md  REPORTING.md  architecture_conference.md  scoring_methodology.md  scoring_whitepaper_short.md  testing_framework_owasp_llm.md  threat_model.md
scripts/: community_smoke.py  dashboard_traffic.py  exec_dashboard_smoke.py  seed_executive_live.py
tests/: conftest.py  test_api.py  test_edition_community.py  test_enforcement_api.py  test_health.py  test_pipeline.py  test_policies_api.py  test_policy_enforcement_middleware.py  test_policy_engine.py  test_policy_store.py  test_proxy_endpoint.py  test_rules.py  test_rules_evaluate.py
web/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  vite.config.js
(+100 files in other folders)
